# Ripple

./: .env.example  .gitignore  DEMO_SCRIPT.md  NEXT_SESSION_PLAN.md  README.md  SESSION_HANDOFF.md  docker-compose.yml  main.py  pyproject.toml  status.md
backend/agents/: agent_4_chat.py  alt_sourcing.py  conversation.py  orchestrator.py  report_compiler.py  risk_scorer.py  signal_scraper.py  supplier_mapping.py
backend/agents/tools/: score_skus.py
backend/api/: routes.py
backend/graph/: orchestrator.py  pipeline.py  state.py
backend/jobs/: scrape_signals.py
backend/seeds/: embed_suppliers.py  inventory.sql  memories.json  run_all.py  seed_memories.py  seed_neo4j.py  seed_postgres.py  suppliers.cypher
backend/storage/: mem0_client.py  mongo_client.py  neo4j_client.py  postgres_client.py  redis_client.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentsPanel.tsx  AlertDetail.tsx  AlertsFeed.tsx  ChatPanel.tsx  KPIStrip.tsx  NewsDashboard.tsx  PipelineTimeline.tsx  ResultsDashboard.tsx  RiskGauge.tsx  SKUWatchlist.tsx  SignalInput.tsx  SignalsPanel.tsx  shared.tsx
frontend/src/hooks/: useAlerts.ts  useChat.ts  useNews.ts  usePortWeather.ts  useRipple.ts
scripts/: seed_demo.py
